[package]
name = "flash_writer"
version = "0.1.0"
authors = ["Matvei <matvei@wheel.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "0.1"

[dependencies.stm32ral]
version = "0.4.0"
default-features = false

[features]
default = []
stm32f0x1 = [ "stm32ral/stm32f0x1", "stm32ral/rt"]



[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z"