[package]
name = "flash_writer"
version = "0.1.0"
authors = ["Matvei <klimatt.gu@gmail.com>"]
edition = "2018"

[dependencies]
cfg-if = "0.1"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
stm32-device-signature = {version = "0.3.3"}

[dependencies.stm32f0xx-hal]
version = "0.17.1"

[features]
default = []
stm32f0xx = ["stm32-device-signature/stm32f0"]
stm32f051 =  ["stm32f0xx", "stm32f0xx-hal/stm32f051"]



[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
opt-level = "z"